--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.5.12",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
